--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,10 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pylint = "*"
+pep8 = "*"
+yapf = "*"
+autopep8 = "*"
 
 [packages]
 requests = "*"
