--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,10 @@ autopep8 = "*"
 requests = "*"
 usaddress = "*"
 xmltodict = "*"
+black = "*"
 
 [requires]
 python_version = "3.7"
+
+[pipenv]
+allow_prereleases = true
